<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="107dp"
            android:layout_height="107dp"
            android:layout_marginTop="33dp"
            android:src="@mipmap/icon"
            android:layout_centerHorizontal="true" />
        <RelativeLayout
            android:id="@+id/register_phone_rl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:layout_below="@id/logo"
            android:layout_marginTop="44dp">
            <ImageView
                android:id="@+id/register_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/denglu_shouji"/>
            <EditText
                android:id="@+id/register_phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_phone"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/register_img"
                android:layout_marginLeft="16dp"
                android:textSize="@dimen/hint_size"
                android:maxLength="11"
                android:inputType="phone"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_color"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/register_verif_rl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/register_phone_rl"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp">

            <ImageView
                android:id="@+id/register_verif_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/zhuce_safe" />

            <EditText
                android:id="@+id/forget_verif_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@id/register_verif_img"
                android:background="@null"
                android:hint="@string/forget_verif"
                android:maxLength="6"
                android:inputType="phone"
                android:textSize="@dimen/hint_size" />

            <TextView
                android:id="@+id/get_verif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/forget_get_verif"
                android:layout_alignParentRight="true"
                android:textColor="@color/red"
                android:padding="5dp"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="17dp"
                android:background="@color/red"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/get_verif"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/line_color"
                android:layout_marginBottom="10dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/register_pwd_rl_1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:layout_below="@id/register_verif_rl">
            <ImageView
                android:id="@+id/pwd_img_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/denglu_mima"/>
            <EditText
                android:id="@+id/login_pwd_et_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/forget_new_pwd"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/pwd_img_1"
                android:layout_marginLeft="16dp"
                android:textSize="@dimen/hint_size"
                android:inputType="textPassword"/>
            <ImageView
                android:id="@+id/yanjing_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/yanjing"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_color"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/register_pwd_rl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:layout_below="@id/register_pwd_rl_1">
            <ImageView
                android:id="@+id/pwd_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/denglu_mima"/>
            <EditText
                android:id="@+id/login_pwd_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/forget_sure_pwd"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/pwd_img"
                android:layout_marginLeft="16dp"
                android:textSize="@dimen/hint_size"
                android:inputType="textPassword"/>
            <ImageView
                android:id="@+id/yanjing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/yanjing"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_color"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/login_btn"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/register"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_below="@id/register_pwd_rl"
            android:layout_marginTop="38dp"/>

        <LinearLayout
            android:id="@+id/register_go_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/register_btn"
            android:gravity="center"
            android:layout_marginTop="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/hint_size"
                android:text="@string/register_hint"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/hint_size"
                android:text="@string/register_hint_2"
                android:textColor="@color/yellow_color"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/register_go_login"
            android:gravity="center"
            android:layout_marginTop="95dp"
            android:layout_marginBottom="28dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/hint_size"
                android:text="@string/register_default"/>
            <TextView
                android:id="@+id/syxy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/hint_size"
                android:text="@string/register_xy_1"
                android:textColor="@color/yellow_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/hint_size"
                android:text="@string/register_and"
                android:visibility="gone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/hint_size"
                android:text="@string/register_xy_2"
                android:textColor="@color/yellow_color"
                android:visibility="gone"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
